--- a/src/index.css
+++ b/src/index.css
@@ -53,8 +53,7 @@ button {
 button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+button:active {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
@@ -63,7 +62,7 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
+  a:active {
     color: #747bff;
   }
   button {
